// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slot node If it matches the snapshot 1`] = `
<div
  class="undefined"
  id="id"
>
  <header
    class="slot__header"
  >
    
      
    <p
      class="slot__name"
    >
      
        name
      
    </p>
    
      
    <a
      class="slot__link"
    >
      
        ▸
      
    </a>
    
    
  </header>
  
    
  <main
    class="slot__body"
  >
    
      
    <div
      class="slot__content "
      style="top: 0px; left: 0px;"
    />
    
    
  </main>
  
  
</div>
`;

exports[`Slot node Open and close 1`] = `
<div
  class="undefined"
  id="id"
>
  <header
    class="slot__header"
  >
    
      
    <p
      class="slot__name"
    >
      
        name
      
    </p>
    
      
    <a
      class="slot__link"
    >
      ▾
    </a>
    
    
  </header>
  
    
  <main
    class="slot__body hidden"
  >
    
      
    <div
      class="slot__content "
      style="top: 0px; left: 0px;"
    />
    
    
  </main>
  
  
</div>
`;

exports[`Slot node Open and close 2`] = `
<div
  class="undefined"
  id="id"
>
  <header
    class="slot__header"
  >
    
      
    <p
      class="slot__name"
    >
      
        name
      
    </p>
    
      
    <a
      class="slot__link"
    >
      ▸
    </a>
    
    
  </header>
  
    
  <main
    class="slot__body"
  >
    
      
    <div
      class="slot__content "
      style="top: 0px; left: 0px;"
    />
    
    
  </main>
  
  
</div>
`;

exports[`Slot node Open and close 3`] = `
<div
  class="undefined"
  id="id"
>
  <header
    class="slot__header"
  >
    
      
    <p
      class="slot__name"
    >
      
        name
      
    </p>
    
      
    <a
      class="slot__link"
    >
      ▾
    </a>
    
    
  </header>
  
    
  <main
    class="slot__body hidden"
  >
    
      
    <div
      class="slot__content "
      style="top: 0px; left: 0px;"
    />
    
    
  </main>
  
  
</div>
`;

exports[`Slot node Open and close by click 1`] = `
<div
  class="undefined"
  id="id"
>
  <header
    class="slot__header"
  >
    
      
    <p
      class="slot__name"
    >
      
        name
      
    </p>
    
      
    <a
      class="slot__link"
    >
      ▾
    </a>
    
    
  </header>
  
    
  <main
    class="slot__body hidden"
  >
    
      
    <div
      class="slot__content "
      style="top: 0px; left: 0px;"
    />
    
    
  </main>
  
  
</div>
`;
